added proprities to product. added the functionality of comments

--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,11 @@
             <h6>Add new product</h6>
             <form id="newproductForm" name="newproductform">
                 <input type="text" name="name" placeholder="name">
-                <input type="text" name="carBrand" placeholder="Car Brand">
-                <input type="text" name="carModel" placeholder="Car Model">
+                <input type="text" name="description" placeholder="description">
+                <input type="text" name="country" placeholder="Country">
+                <input type="text" name="brand" placeholder="Brand">
+                <input type="text" name="model" placeholder="Model">
+                <input type="text" name="condition" placeholder="Condition">
                 <input type="number" name="price" placeholder="Price">
                 <input type="number" name="quantity" placeholder="Quantity">
                 <input type="number" name='makerId' placeholder="Manufacturer Code">
